# EventDispatcher

./: CMakeLists.txt  main.cpp
include/: Event.hpp  Publisher.hpp  Utilities.hpp
src/: Publisher.cpp
